[package]
name = "rippl"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Remote Image Processing Pipeline Library"
documentation = "https://docs.rs/rippl"
readme = "README.md"
homepage = "https://github.com/ewpratten/rippl"
repository = "https://github.com/ewpratten/rippl"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
image = "0.23"
imgur = "0.7"
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
tokio-test = "0.4"